# LangServeDemo

./: README.md  create_index.ipynb  pyproject.toml
app/: server.py
langserve_index/: index.pkl
