[tool.poetry]
name = "LangServeDemo"
version = "0.1.0"
description = ""
authors = ["Chris Alexiuk chris@alexiuk.ca"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
faiss-cpu = "^1.7.4"
langchain = "^0.0.350"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
